2002-09-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure: regen'ed
	* configure.in: use tcl_libdir in EXP_LIB_SPEC instead of
	${INSTALL_ROOT}${exec_prefix}/lib (steffen)

	* exp_main_tk.c (Tk_Init2): don't call XSynchronize on OS X.

2002-08-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
	
	* Merged changes from the official version 5.38 of expect into the
	  SF sources. See details below.

	* Makefile.in: Added generation of MD5 checksum for distributed
	  archive.
	* rftp:         Bugfix by Curt Schroeder, see HISTORY
	* HISTORY:      Updated with new info.
	* configure:    Updated version info.
	* configure.in: Updated version info.

2002-06-26  David Gravereaux <davygrvy@pobox.com>

	* example/weather: Updated script to use rainmaker.wunderground.com
	instead of cirrus.sprl.umich.edu.  The old service is closed.
	Added Larry Virden's notes about how rainmaker needs reverse DNS
	from the peer making the connection or no data can retrieved.
	This appears to be a blind error condition.

2002-06-17  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* exp_main_tk.c: #ifdef'd definition of "matherr". This hack is
	  not required for 8.4 anymore. But still for 8.3.

2002-03-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* exp_main_sub.c: Fixed typo in merge of #459646. Thanks to Hemang Lavana.

 	* exp_log.c (expStdoutLogU): Merged fix for SF Bug #513382 into
	  the HEAD (The source of the patch is "expect-sf418892-sf439042-branch").

	  Use Tcl_WriteChars/Tcl_Flush instead of 'fwrite' for tcl 8.1 and
	  beyond to enforce correct conversion of the internal UTF/8 into
	  the external representation.

	* Merged fix for SF Bug #459646 into the HEAD (The source of the
	  patch is "expect-sf418892-sf439042-branch").

	* Merged fix for SF Bug #439042 into the HEAD (The source of the
	  patch is "expect-sf418892-sf439042-branch").

	* Merged fix for SF Bug #418892 into the HEAD (The source of the